crates/strider/tests/snapshots/v2__mips32be__calls__main.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x400778:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x6:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x4007fc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v10" [label="Post Call\na1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "11" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "6" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x40084c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" -> "11" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v15" [label="Post Call\na1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v15" [color="#888888", style=dashed];
  "v15" -> "11" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "16" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "11" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x400874:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "16" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "16" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "16" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x4008a4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "21" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v25" [label="Post Call\na1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "16" -> "v25" [color="#888888", style=dashed];
  "v25" -> "21" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "26" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "21" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x4008c0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" -> "26" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x400770:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" -> "26" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "26" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v34" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v34" [color="#888888", style=dashed];
  "v34" -> "31" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v35" [color="#888888", style=dashed];
  "v35" -> "31" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "33" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "36" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v37" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v37" [color="#888888", style=dashed];
  "v37" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "26" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "38" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "26" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v41" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v41" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "21" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v45" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "21" -> "v45" [color="#888888", style=dashed];
  "v45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "21" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "44" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "22" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "16" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "16" -> "v49" [color="#888888", style=dashed];
  "v49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "16" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "48" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "17" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "11" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v50" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v50" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "51" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v53" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v53" [color="#888888", style=dashed];
  "v53" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "11" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "52" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "6" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v54" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v54" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "55" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v57" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v57" [color="#888888", style=dashed];
  "v57" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "56" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "7" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "1" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v58" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v58" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "59" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v61" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v61" [color="#888888", style=dashed];
  "v61" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "60" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "5" [label="arg[1] ← a1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "62" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v63" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v63" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "64" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "65" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "62" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "67" -> "62" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "65" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
